# vibrational-deduction-transformer

./: .gitignore  LICENSE  MANIFEST.in  PARAMETERS.md  README.md  benchmark.py  pyproject.toml  train.py  visualise.py
benchmarks/: cora_pubmed_benchmark.py
configs/: default.yaml  mnist.yaml  mps.yaml  spectral_demo.yaml
demos/: spectral_generation_demo.py  visualise_spectral_demo.py
docs/: 00-architecture.md  00-design-A__v2 -- Spectral-PPCA.md  00-design-B__v2 -- Spectral-PPCA Extensions to the Wiring Autoencoder.md  01-references.md  03-branching.md  04-stability.md  05-first-run.md  06-second-run.md  07-third-run.md  08-fifth-run.md  README.md  architecture.md
docs/fifth-run-logs/: logs.txt  training_curves.json
docs/fourth-run-logs/: logs.txt  training_curves.json
docs/paper/: references.bib  vdt.aux  vdt.out  vdt.tex  vdt.toc  vibrational-deduction-transformer.aux  vibrational-deduction-transformer.out  vibrational-deduction-transformer.tex  vibrational_deduction_transformer.aux  vibrational_deduction_transformer.bbl  vibrational_deduction_transformer.blg  vibrational_deduction_transformer.out  vibrational_deduction_transformer.tex  vibrational_deduction_transformer.toc  wae_v2.tex
docs/second-run-logs/: logs.txt  training_curves.json
docs/third-run-logs/: logs.txt
docs/v1-legacy/: 01-references.md
docs/v2/: 00-architecture.md  00-design-A__WAE v2 — Spectral-PPCA Extensions to the Wiring Autoencoder.md  00-design-B__WAE v2 init --Spectral-PPCA.md  03-branching.md  04-stability.md  README.md
experiments/: option1_train.py  option6_ablation.py
tests/: test_cfl_dynamic.py  test_encoder.py  test_encoder_v2.py  test_laplacian.py  test_metrics.py  test_model.py  test_model_v2.py  test_recon_loss.py  test_spectral.py  test_spectral_loading_decoder_init.py  test_spectral_memory.py  test_stability.py  test_vdt.py  test_wae.py  test_wiring_decoder.py
vdeductive/: __init__.py  classifier.py  density.py  device.py  diffusion_decoder.py  encoder.py  laplacian.py  metrics.py  model.py  spectral_memory.py  stability.py  vdt.py  vib_autoencoder.py
vdeductive/_cli/: __init__.py  bench.py  train.py  vis.py
vdeductive/_configs/: __init__.py  default.yaml
vdt/: __init__.py  classifier.py  density.py  device.py  diffusion_decoder.py  encoder.py  laplacian.py  metrics.py  model.py  spectral.py  spectral_memory.py  stability.py  vdt.py  vib_autoencoder.py  wiring_decoder.py
vdt/_cli/: __init__.py  bench.py  train.py  vis.py
vdt/_configs/: __init__.py  default.yaml
wae/: __init__.py  classifier.py  dataset.py  device.py  diffusion_decoder.py  encoder.py  laplacian.py  metrics.py  model.py  spectral.py  spectral_memory.py  stability.py  vdt.py  vib_autoencoder.py  wiring_decoder.py
