[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdt"
version = "0.1.0"
description = "Variational Autoencoder with a differentiable graph-wiring generative path"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Lorenzo Moriondo", email = "tunedconsulting@gmail.com" }]
keywords = ["graph", "laplacian", "variational-autoencoder", "spectral", "arrowspace"]

dependencies = [
    "torch>=2.12",
    "torch_geometric>=2.7",
    "scipy>=1.17",
    "numpy>=2.4",
    "scikit-learn>=1.9",
    "pyyaml>=6.0",
    "tqdm>=4.67",
    "pandas>=3.0",
    "matplotlib>=3.10",
    "wandb>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vdt*"] 
exclude = ["tests*", "docs*", "demos*", "configs*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
test = "pytest:main"
