[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdeductive"
version = "0.1.0"
description = "Vibrational Deduction Transformer -- spectral VAE with differentiable graph-wiring generative path"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Lorenzo Moriondo", email = "tunedconsulting@gmail.com" }]
keywords = [
    "graph",
    "laplacian",
    "variational-autoencoder",
    "spectral",
    "vibrational",
    "arrowspace",
    "graph-neural-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
# torch and torch_geometric are NOT listed here because their correct wheel
# depends on the CUDA / ROCm / MPS variant chosen by the user.  Install them
# separately before (or after) installing vdeductive::
#
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
#   pip install torch_geometric
#   pip install vdeductive
#
# All other runtime dependencies are listed below.
dependencies = [
    "torch>=2.3",
    "torch_geometric>=2.5",
    "scipy>=1.13",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

# ---------------------------------------------------------------------------
# Optional extras
# ---------------------------------------------------------------------------
[project.optional-dependencies]
# Experiment tracking
wandb = ["wandb>=0.17"]

# Benchmarking against OGB datasets
ogb = ["ogb>=1.3"]

# Development tools
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

# Convenience bundle for researchers running full experiments
all = [
    "wandb>=0.17",
    "ogb>=1.3",
    "torchvision>=0.18",
]

# ---------------------------------------------------------------------------
# Console entry points
# ---------------------------------------------------------------------------
# After `pip install vdeductive` the following commands are available on PATH:
#
#   vdeductive-train   -- run a training experiment from a YAML config
#   vdeductive-bench   -- run the benchmark suite
#   vdeductive-vis     -- run the visualisation tools
#
[project.scripts]
"vdeductive-train" = "vdeductive._cli.train:main"
"vdeductive-bench" = "vdeductive._cli.bench:main"
"vdeductive-vis"   = "vdeductive._cli.vis:main"

# ---------------------------------------------------------------------------
# Package discovery -- include the vdeductive package and its bundled configs
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["vdeductive*"]
exclude = ["tests*", "docs*", "demos*"]

[tool.setuptools.package-data]
vdeductive = [
    "_configs/*.yaml",
    "_configs/*.yml",
    "py.typed",
]

# ---------------------------------------------------------------------------
# Project URLs
# ---------------------------------------------------------------------------
[project.urls]
"Homepage"    = "https://github.com/tuned-org-uk/vibrational-deduction-transformer"
"Bug Tracker" = "https://github.com/tuned-org-uk/vibrational-deduction-transformer/issues"
"Source"      = "https://github.com/tuned-org-uk/vibrational-deduction-transformer"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
